--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
+  provider               : "google-analytics" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : "G-LE7F6T7JJ1"
     anonymize_ip         : false # (default)
