--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "W1nz4c4r"
-  avatar           : "/assets/images/cyber dead.jpeg"
+  avatar           : "/assets/images/cyber dead.jpg"
   bio              : "Pentester in progress, CTF player<br>Hacker - HackTheBox Rank"
   location         : "United States"
   email            : "moralesriky97@gmail.com"
