--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   avatar           : "/assets/images/cyber dead.jpg"
   bio              : "Pentester, CTF player, <br>Hacker - HackTheBox Rank</br>, cyber Security Enthusiast"
   location         : "United States"
-  email            : "moralesriky97@gmail.com"
+  email            : "solorzanomorales11@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
